--- a/lite/examples/style_transfer/android/app/build.gradle
+++ b/lite/examples/style_transfer/android/app/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'de.undercouch.download'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     signingConfigs {
@@ -32,7 +33,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "org.tensorflow.lite.examples.styletransfersample"
+        applicationId "org.tensorflow.lite.examples.styletransfersampleUVA"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
@@ -77,6 +78,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${lifecycle_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
     kapt "androidx.lifecycle:lifecycle-compiler:${lifecycle_version}"
 
     implementation "com.github.bumptech.glide:glide:${glide_version}"
@@ -90,4 +93,6 @@ dependencies {
 
     implementation("org.tensorflow:tensorflow-lite:${tfl_version}") { changing = true }
     implementation("org.tensorflow:tensorflow-lite-gpu:${tfl_version}") { changing = true }
+
 }
+
