--- a/lite/examples/style_transfer/android/app/src/main/AndroidManifest.xml
+++ b/lite/examples/style_transfer/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="org.tensorflow.lite.examples.styletransfer">
     <uses-sdk />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.hardware.camera.any" />
     <application
         android:allowBackup="true"
